<resources>
  <string name="app_name">Project Manager</string>
  <string name="title_task_detail">Task Detail</string>
  <string name="title_project_composer">Project Composer</string>
  <string name="project_name">Project name</string>
  <string name="project_description">Descriptions</string>
  <string name="project_target">Target</string>
  <string name="title_create_project">Create Project</string>
  <string name="unit_prompt">Target unit</string>
  <string name="button_create">Create</string>
  <string name="error_required">This field required</string>
  <string name="title_project">Projects</string>
  <string name="text_updated_at">Updated at</string>
  <string name="text_created_at">Created at</string>
  <string name="text_setup_deadline">Setup the deadline</string>
  <string name="lorem_ipsum_long">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
  <string name="lorem_ipsum_short">Lorem Ipsum</string>
  <string name="title_task">Tasks</string>
  <string name="button_view_task">View Task</string>
  <string name="short_date_format">dd MMM yyyy</string>
  <string name="long_date_format">dd MMM yyyy HH:mm:ss</string>
  <string name="action_add_task">Add task</string>
  <string name="action_edit">Edit</string>
  <string name="action_delete">Delete</string>
  <string name="title_delete_confirmation">Delete confirmation</string>
  <string name="text_delete_message">Are you sure want to delete it?</string>
  <string name="button_yes">Yes</string>
  <string name="button_no">No</string>
  <string name="title_task_composer">Task Composer</string>
  <string name="text_empty_project">No projects yet</string>
  <string name="text_empty_task">No task yet</string>
  <string name="text_empty_sub_task">No sub task yet</string>
  <string name="title_create_task">create task</string>
  <string name="button_view_sub_task">view sub task</string>
  <string name="button_start_task">Start this task</string>
  <string name="action_add_sub_task">Add sub task</string>
  <string name="hint_target">Target (in hour)</string>
  <string name="hint_task_name">Task name</string>
  <string name="button_update">Update</string>
  <string name="title_task_executor">Task Executor</string>

  <string name="time_format">%1$s</string>

  <plurals name="target_time">
    <item quantity="one">Your target is %d hour</item>
    <item quantity="other">Your target is %d hours</item>
  </plurals>

  <string name="left_time">%1$s left</string>
  <string name="button_stop">Stop task</string>
  <string name="title_confirmation">Confirmation</string>
  <string name="text_task_confirmation">Have you complete this task?</string>
</resources>
