<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".TaskListActivity"
    >

  <android.support.design.widget.AppBarLayout
      android:id="@+id/app_bar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/AppTheme.AppBarOverlay"
      >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        />

  </android.support.design.widget.AppBarLayout>

  <android.support.v4.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:orientation="vertical"
        >

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/margin_10dp"
          app:counterEnabled="true"
          app:counterMaxLength="50"
          >
        <EditText
            android:id="@+id/projectNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/project_name"
            android:inputType="textCapWords"
            android:maxLength="50"
            />
      </android.support.design.widget.TextInputLayout>
      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/margin_10dp"
          app:counterEnabled="true"
          app:counterMaxLength="100"
          >
        <EditText
            android:id="@+id/projectDescEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/project_description"
            android:inputType="textCapSentences"
            android:maxLength="100"
            />
      </android.support.design.widget.TextInputLayout>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/margin_10dp"
          android:orientation="horizontal"
          >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_weight="1"
            android:minWidth="50dp"
            >
          <EditText
              android:id="@+id/projectTargetEditText"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/project_target"
              android:inputType="number"
              android:maxLength="2"
              />
        </android.support.design.widget.TextInputLayout>
        <Spinner
            android:id="@+id/unitSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="0"
            android:prompt="@string/unit_prompt"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            />
      </LinearLayout>
      <android.support.v7.widget.AppCompatButton
          android:id="@+id/createProjectButton"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/button_create"
          style="@style/Widget.AppCompat.Button"
          />
    </LinearLayout>
  </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>