<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:toosl="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/margin_2dp"
    app:cardElevation="@dimen/margin_2dp"
    >

  <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/taskNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/andada"
        android:maxLines="2"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="@dimen/font_size_20sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/priorityTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        toosl:text="@string/lorem_ipsum_short"
        />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/priorityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/andada"
        android:maxLines="2"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        toosl:text="@string/lorem_ipsum_short"
        />

    <ImageView
        android:id="@+id/moreMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_more"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/targetTextView"
        />

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/andada"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/moreMenu"
        app:layout_constraintStart_toEndOf="@+id/moreMenu"
        app:layout_constraintTop_toTopOf="@+id/moreMenu"
        toosl:text="@string/lorem_ipsum_short"
        />
    <TextView
        android:id="@+id/createdAtTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/andada"
        android:textColor="@color/grey"
        android:textSize="@dimen/font_size_10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskNameTextView"
        toosl:text="@string/lorem_ipsum_short"
        />

    <TextView
        android:id="@+id/taskDescTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/andada"
        android:textAppearance="?attr/textAppearanceListItemSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createdAtTextView"
        toosl:text="@string/lorem_ipsum_long"
        />

    <TextView
        android:id="@+id/targetTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="@dimen/margin_2dp"
        android:drawableStart="@drawable/ic_target"
        android:fontFamily="@font/andada"
        android:gravity="start|center"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskDescTextView"
        toosl:text="@string/lorem_ipsum_short"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/viewTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/button_view_sub_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/targetTextView"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        />
  </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>